# fastapi-rfc3339-not-valid

./: pyproject.toml  readme.md
tests/: test_fastapi_rfc3339.py
