[tool.poetry]
name = "fastapi-rfc3339"
version = "0.1.0"
description = ""
authors = ["Max Froehlich <max.froehlich@serviceware.de>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = {version = "^0.61.0", extras = ["requests"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rfc3339-validator = "^0.1.2"
black = "^19.10b0"
flake8 = "^3.8.3"
requests = "^2.24.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
